# qna-tg-bot

./: .gitignore  pyproject.toml
src/qna_tg_bot/: __init__.py  config.py
src/qna_tg_bot/data/: qna.json
src/qna_tg_bot/handlers/: __init__.py
src/qna_tg_bot/utils/: __init__.py  search.py
