[project]
name = "qna-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladislav Sayapin",email = "70110788+v-sayapin@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot (>=21.10,<22.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "rapidfuzz (>=3.12.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "qna_tg_bot", from = "src"}]

[tool.poetry.scripts]
bot = "qna_tg_bot:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
